deployment/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: soulcaster
  namespace: soulcaster
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: soulcaster
    spec:
      containers:
      - name: soulcaster
        image: gomagames/soulcaster:0.1.3
        ports:
        - containerPort: 80
