deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: soulcaster
  namespace: soulcaster
spec:
  selector:
    app: soulcaster
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
