deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: soulcaster
  namespace: soulcaster
  annotations:
    nginx.org/websocket-services: "soulcaster"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "0s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "0s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "0s"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - soulcaster.gomagames.com
    secretName: app-tls
  rules:
  - host: soulcaster.gomagames.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: soulcaster
          servicePort: 80
